# hakoniwa-pdu-endpoint

./: .gitignore  CMakeLists.txt  FAQ.md  README.md  build.bash  install.bash  uninstall.bash
.github/workflows/: ci.yml
cmake/: HakoniwaPduEndpointConfig.cmake.in  hakoniwa_pdu_endpointConfig.cmake.in
config/sample/: buffer_smart_endpoint.json  endpoint.json  endpoint_container.json  endpoint_examples.json  endpoint_internal_cache.json  endpoint_mux.json  endpoint_tcp_client.json  endpoint_tcp_server.json  endpoint_websocket_client.json  endpoint_websocket_server.json  tcp_endpoint.json  udp_endpoint.json
config/sample/cache/: internal_buffer.json  internal_queue.json
config/sample/comm/: tcp_client_inout_comm.json  tcp_client_out_comm.json  tcp_mux.json  tcp_server_in_comm.json  tcp_server_inout_comm.json  udp_bcast_out_comm.json  udp_client_for_test_comm.json  udp_client_out_comm.json  udp_inout_comm.json  udp_inout_remote_comm.json  udp_mcast_in_comm.json  udp_server_in_comm.json  websocket_client_inout_comm.json  websocket_client_out_comm.json  websocket_server_in_comm.json  websocket_server_inout_comm.json
config/sample/comm/hakoniwa/: shm_cbk_comm.json  shm_comm.json  shm_poll_comm.json
config/schema/: buffer_smart_endpoint_schema.json  cache_schema.json  comm_schema.json  endpoint_container_schema.json  endpoint_schema.json  pdu_def_schema.json  pdudef.schema.json  pdutypes.schema.json  tcp_endpoint_schema.json  udp_endpoint_schema.json
config/tutorial/: endpoint_tcp_client.json  endpoint_tcp_server.json  endpoint_udp_client.json  endpoint_udp_server.json  endpoint_websocket_client.json  endpoint_websocket_server.json
config/tutorial/cache/: buffer.json
config/tutorial/comm/: tcp_client_out.json  tcp_server_in.json  udp_client_out.json  udp_server_in.json  websocket_client_out.json  websocket_server_in.json
docs/: design_notes.md  design_philosophy.md  design_tradeoffs.md
docs/diagrams/: README.md  mux_flow.md  semantics.md  tradeoff.md
docs/tutorials/: endpoint.md
examples/: CMakeLists.txt  README.md  endpoint_internal_cache.cpp  endpoint_minimal.cpp  endpoint_tcp_client.cpp  endpoint_tcp_mux.cpp  endpoint_tcp_server.cpp  endpoint_udp_client.cpp  endpoint_udp_server.cpp  endpoint_ws_client.cpp  endpoint_ws_server.cpp
include/hakoniwa/pdu/: endpoint.hpp  endpoint_comm_multiplexer.hpp  endpoint_container.hpp  endpoint_types.h  endpoint_types.hpp  pdu_definition.hpp  pdu_factory.hpp  protocol_if.hpp  raw_endpoint.hpp  smart_endpoint.hpp  socket_utils.hpp  tcp_endpoint.hpp  type_endpoint.hpp  udp_endpoint.hpp
include/hakoniwa/pdu/cache/: cache.hpp  cache_buffer.hpp  cache_queue.hpp
include/hakoniwa/pdu/comm/: comm.hpp  comm_mux.hpp  comm_raw.hpp  comm_shm.hpp  comm_shm_impl.hpp  comm_tcp.hpp  comm_tcp_mux.hpp  comm_udp.hpp  comm_websocket.hpp  packet.hpp
include/hakoniwa/pdu/smart_endpoint/: buffer_smart_endpoint.hpp
include/hakoniwa/time_source/: hakoniwa_time_source.hpp  hakoniwa_time_source_impl.hpp  real_time_source.hpp  time_source.hpp  time_source_factory.hpp  virtual_time_source.hpp
python/hakoniwa_pdu_endpoint/: __init__.py  gen_endpoint_config.py  validate_json.py  validate_pdudef.py
src/: CMakeLists.txt  comm_shm.cpp  comm_shm_callback.cpp  comm_shm_poll.cpp  comm_tcp.cpp  comm_tcp_mux.cpp  comm_udp.cpp  comm_websocket.cpp  endpoint_comm_multiplexer.cpp  endpoint_container.cpp  hakoniwa_time_source.cpp  hakoniwa_time_source_callback.cpp  hakoniwa_time_source_poll.cpp  pdu_definition.cpp  pdu_factory.cpp  socket_utils.cpp  tcp_endpoint.cpp  udp_endpoint.cpp
test/: CMakeLists.txt  buffer_smart_endpoint_test.cpp  endpoint_test.cpp  latest_config.json  queue_config.json  tcp_endpoint_test.cpp  test_comm_tcp_client_v1.json  test_comm_tcp_server_v1.json  test_endpoint_buffer.json  test_endpoint_queue.json  test_endpoint_tcp_client.json  test_endpoint_tcp_client_v1.json  test_endpoint_tcp_server.json  test_endpoint_tcp_server_v1.json  test_endpoint_udp_client.json  test_endpoint_udp_server.json  test_endpoint_ws_client.json  test_endpoint_ws_client_inout.json  test_endpoint_ws_server.json  test_endpoint_ws_server_inout.json  test_pdu_def_endpoint.json  test_pdu_def_endpoint_compact.json  test_pdudef.json  test_pdudef_compact.json  test_pdutypes_compact.json  udp_endpoint_test.cpp
test/mux/: comm_tcp_mux.json  comm_tcp_mux_client.json  endpoint_tcp_mux.json  endpoint_tcp_mux_client1.json  endpoint_tcp_mux_client2.json
test/validation/: bad_missing_cache.json  bad_missing_comm.json  bad_missing_ref.json
tools/: validate_pdudef.py
